public/styles/material.css
.material-icons {
    display: inline-flex;
    vertical-align: text-bottom;
}

/* Rules for sizing the icon. */

.material-icons.md-18 {
    font-size: 18px;
}

.material-icons.md-24 {
    font-size: 24px;
}

.material-icons.md-36 {
    font-size: 36px;
}

.material-icons.md-48 {
    font-size: 48px;
}

/* Rules for using icons as black on a light background. */

.material-icons.md-dark {
    color: rgba(0, 0, 0, 0.54);
}

.material-icons.md-dark.md-inactive {
    color: rgba(0, 0, 0, 0.26);
}

/* Rules for using icons as white on a dark background. */

.material-icons.md-light {
    color: rgba(255, 255, 255, 1);
}

.material-icons.md-light.md-inactive {
    color: rgba(255, 255, 255, 0.3);
}

.portfolio-column:hover {
    opacity: .6;
}

.portfolio-column {
    width: 30%;
    cursor: pointer;
    float: left;
}

html, body {
    height: 100%;
    margin: 0;
}

.content {
    min-height: 100%;
}

.content-inside {
    padding: 20px;
    padding-bottom: 50px;
}

.footer {
    height: 100px;
    margin-top: -50px;
}

.footer-link {
    color: rgba(255, 255, 255, .6);
}

.footer-link:hover {
    color: #fff;
}

footer {
    background: #375a7f;
    color: rgba(255, 255, 255, .6);
    line-height: 30px;
    padding: 0 20px;
}

